refactor(core): remove autogenerated Swagger docs and unused task service components
